--- a/Rockman/Rockman.vcxproj
+++ b/Rockman/Rockman.vcxproj
@@ -82,19 +82,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AABBCollisionDetected.cpp" />
+    <ClCompile Include="About.cpp" />
     <ClCompile Include="Beak.cpp" />
     <ClCompile Include="BigEye.cpp" />
     <ClCompile Include="Blader.cpp" />
+    <ClCompile Include="Blood.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="BulletRockman.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ChangeState.cpp" />
     <ClCompile Include="CutMan.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Flea.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameOverState.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GameStateManager.cpp" />
     <ClCompile Include="GutsMan.cpp" />
+    <ClCompile Include="HelpState.cpp" />
     <ClCompile Include="IceMan.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Item.cpp" />
@@ -120,23 +125,29 @@
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="winmain.cpp" />
+    <ClCompile Include="WinState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AABBCollisionDetected.h" />
+    <ClInclude Include="About.h" />
     <ClInclude Include="Beak.h" />
     <ClInclude Include="BigEye.h" />
     <ClInclude Include="Blader.h" />
+    <ClInclude Include="Blood.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="BulletRockman.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ChangeState.h" />
     <ClInclude Include="CutMan.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Flea.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameOverState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GamestateManager.h" />
     <ClInclude Include="GutsMan.h" />
+    <ClInclude Include="HelpState.h" />
     <ClInclude Include="IceMan.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Item.h" />
@@ -161,6 +172,7 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="utils.h" />
+    <ClInclude Include="WinState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
