complete map editor

--- a/MapEditor_Than/MapEditor/MapEditor/MapEditor.csproj
+++ b/MapEditor_Than/MapEditor/MapEditor/MapEditor.csproj
@@ -91,7 +91,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\ground\land.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\Resources\brick.png" />
   </ItemGroup>
@@ -262,6 +264,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\boss\iceman.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ground\landwhite.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ground\LandIceberg.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
