--- a/MapEditor_Than/MapEditor/MapEditor/MapEditor.csproj
+++ b/MapEditor_Than/MapEditor/MapEditor/MapEditor.csproj
@@ -301,6 +301,9 @@
   <ItemGroup>
     <None Include="Resources\enemy\enemy_break -right.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ground\ladder-full.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
