--- a/Rockman/Rockman.vcxproj.filters
+++ b/Rockman/Rockman.vcxproj.filters
@@ -219,6 +219,12 @@
     <ClCompile Include="LockCamera.cpp">
       <Filter>ObjectGame\Block</Filter>
     </ClCompile>
+    <ClCompile Include="TextTure.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneryTile.cpp">
+      <Filter>Map</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RockmanGame.h">
@@ -373,6 +379,12 @@
     </ClInclude>
     <ClInclude Include="LockCamera.h">
       <Filter>ObjectGame\Block</Filter>
+    </ClInclude>
+    <ClInclude Include="TextTure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneryTile.h">
+      <Filter>Map</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
