--- a/Rockman/Rockman.vcxproj
+++ b/Rockman/Rockman.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Beak.cpp" />
     <ClCompile Include="BigEye.cpp" />
     <ClCompile Include="Blader.cpp" />
+    <ClCompile Include="Block.cpp" />
     <ClCompile Include="Blood.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="BulletCutman.cpp" />
@@ -107,7 +108,6 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Ladder.cpp" />
-    <ClCompile Include="Land.cpp" />
     <ClCompile Include="Land1.cpp" />
     <ClCompile Include="Land2.cpp" />
     <ClCompile Include="Land3.cpp" />
@@ -140,6 +140,7 @@
     <ClInclude Include="Beak.h" />
     <ClInclude Include="BigEye.h" />
     <ClInclude Include="Blader.h" />
+    <ClInclude Include="Block.h" />
     <ClInclude Include="Blood.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="BulletCutman.h" />
@@ -162,7 +163,6 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Ladder.h" />
-    <ClInclude Include="Land.h" />
     <ClInclude Include="Land1.h" />
     <ClInclude Include="Land2.h" />
     <ClInclude Include="Land3.h" />
