--- a/Rockman/Rockman.vcxproj
+++ b/Rockman/Rockman.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ChangeState.cpp" />
     <ClCompile Include="CutMan.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Flea.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -115,7 +116,7 @@
     <ClCompile Include="PlayingGameState.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="QuadTreeNode.cpp" />
-    <ClCompile Include="ResourceConfig.cpp" />
+    <ClCompile Include="CConfig.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Rockman.cpp" />
     <ClCompile Include="RockmanGame.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="ChangeState.h" />
     <ClInclude Include="CutMan.h" />
     <ClInclude Include="Define.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Flea.h" />
     <ClInclude Include="Game.h" />
@@ -164,7 +166,7 @@
     <ClInclude Include="PLayingGameState.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="QuadTreeNode.h" />
-    <ClInclude Include="ResourceConfig.h" />
+    <ClInclude Include="CConfig.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Rockman.h" />
     <ClInclude Include="RockmanGame.h" />
