--- a/Rockman/Rockman.vcxproj
+++ b/Rockman/Rockman.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="ExplosiveBoss.cpp" />
     <ClCompile Include="Flea.cpp" />
     <ClCompile Include="FlyingShell.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Door.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="ExplosiveBoss.h" />
     <ClInclude Include="Flea.h" />
     <ClInclude Include="FlyingShell.h" />
     <ClInclude Include="Game.h" />
